--- a/styles/header.css
+++ b/styles/header.css
@@ -1,61 +1,52 @@
 .header {
-  height: 56px;
-
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
+  z-index: 100;
 
+  height: 56px;
   background-color: white;
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: rgb(219, 219, 219);
-
-  z-index: 100;
 }
 
 .left-section {
-  width: 165px;
-  min-width: 165px;
   display: flex;
-  flex-direction: row;
   align-items: center;
-  margin: 0;
-  padding: 0;
 }
 
 .hamburger-menu {
   width: 24px;
-  height: 25px;
-  margin-left: 24px;
-  margin-right: 20px;
-  margin-top: 4px;
+  margin: 0 24px;
+  padding: 0;
   cursor: pointer;
 }
 
 .youtube-logo {
   width: 90px;
-  margin-bottom: 2px;
+  height: 20px;
   cursor: pointer;
 }
 
 .middle-section {
   flex: 1;
-  margin: 0 28px 0 54px;
+  margin: 0 0 0 60px;
   max-width: 470px;
-  min-width: 20px;
+  min-width: 120px;
   display: flex;
-  flex-direction: row;
   align-items: center;
 }
 
 .search-bar-container {
   display: flex;
   width: 370px;
+  min-width: 0px;
   height: 40px;
   flex: 1;
   margin-right: 12px;
@@ -63,23 +54,21 @@
 
 .search-bar {
   flex: 1;
-  width: 0;
+  min-width: 0;
   border: 1px solid rgb(192, 192, 192);
   border-top-left-radius: 2px;
   border-bottom-left-radius: 2px;
   box-shadow: inset 1px 1px 2px rgba(109, 109, 109, 0.1);
   font-size: 16px;
-  font-family: Roboto, Arial;
   padding-left: 12px;
 }
 
 .search-bar::placeholder {
-  font-family: Roboto, Arial;
-  font-size: 15px;
+  color: rgb(137, 137, 137);
 }
 
 .search-button {
-  width: 70px;
+  width: 64px;
   border: 1px solid rgb(192, 192, 192);
   border-top-right-radius: 2px;
   border-bottom-right-radius: 2px;
@@ -88,8 +77,8 @@
 }
 
 .search-icon {
-  width: 25px;
-  height: 25px;
+  width: 24px;
+  height: 24px;
 }
 
 .search-button,
@@ -107,7 +96,6 @@
   border-radius: 2px;
   margin-top: 18px;
   font-size: 13px;
-  font-family: Roboto, Arial;
   padding: 8px 6px;
   position: absolute;
   bottom: -48px;
@@ -129,20 +117,20 @@
   border-radius: 20px;
   background-color: rgb(241, 241, 241);
   cursor: pointer;
+  margin-left: 10px;
 }
 
 .voice-search-icon {
-  height: 24px;
+  width: 24px;
 }
 
 .right-section {
   width: 182px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-right: 25px;
-  margin-left: 0;
+  margin-right: 24px;
+  margin-left: 29px;
   flex-shrink: 0;
 }
 
@@ -154,7 +142,6 @@
   border-radius: 2px;
   margin-top: 18px;
   font-size: 13px;
-  font-family: Roboto, Arial;
   padding: 8px 6px;
   position: absolute;
   bottom: -48px;
@@ -222,7 +209,6 @@
   right: -7px;
   background-color: #cc0000;
   color: white;
-  font-family: Roboto, Arial;
   font-size: 10px;
   border: 2px solid white;
   padding: 2px 5px;
